fix angular final version

--- a/app/app.html
+++ b/app/app.html
@@ -1,3 +1,5 @@
-<main>
-    <h1>angular2 webpack typescript minimal boilerplate</h1>
+<main class="container">
+    <h1>angular2 webpack minimal boilerplate</h1>
+
+    <im-counter></im-counter>
 </main>
