--- a/app/index.template.html
+++ b/app/index.template.html
@@ -4,8 +4,19 @@
 <head>
     <base href="/">
     <title>Angular2 webpack minimal boilerplate</title>
+
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" type="text/css">
+    <style>
+        body {
+            background-color: #ccc;
+        }
+    </style>
 </head>
 
 <body>
